updated dockerfile, gitignore and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,10 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+
+# Binary directories
+build/
 
 # Go workspace file
 go.work
