--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,5 +1,5 @@
-name: Feature Branch CI
-
+name: Feature-Branch-CI
+run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
   push:
     branches:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu:23.10
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
@@ -38,7 +38,7 @@ jobs:
 
   # docker-push:
   #   needs: build-and-test
-  #   runs-on: ubuntu:23.10
+  #   runs-on: ubuntu-latest
 
   #   steps:
   #   - name: Checkout code
