--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,52 +6,46 @@ on:
       - 'feature/*'
 
 jobs:
-  build-and-test:
+  pre-build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - uses: wagoid/commitlint-github-action@v5
+      - uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
+  lint:
+    needs: pre-build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20.x'
+          cache: false
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          # Require: The version of golangci-lint to use.
+          # When `install-mode` is `binary` (default) the value can be v1.2 or v1.2.3 or `latest` to use the latest version.
+          # When `install-mode` is `goinstall` the value can be v1.2.3, `latest`, or the hash of a commit.
+          version: v1.54
 
-    - name: lint
-      run: make lint
-
-    - name: audit
-      run: make audit
-
-    - name: unit-tests
-      run: make test
-
-    - uses: gitleaks/gitleaks-action@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Build Docker image
-      run: make build
-
-  # docker-push:
-  #   needs: build-and-test
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #   - name: Checkout code
-  #     uses: actions/checkout@v2
-
-  #   - name: Set up Docker Buildx
-  #     uses: docker/setup-buildx-action@v1
-
-  #   - name: Log in to Docker Hub
-  #     uses: docker/login-action@v1
-  #     with:
-  #       username: ${{ secrets.DOCKER_USERNAME }}
-  #       password: ${{ secrets.DOCKER_PASSWORD }}
-
-  #   - name: Build and push Docker image
-  #     run: make docker-push
+  test-build:
+    needs: pre-build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20.x'
+          cache: false
+      - name: gotest
+        run: go test ./... -v -count 1 -timeout 5m
+      - name: Check editorconfig compliance
+        uses: editorconfig-checker/action-editorconfig-checker@main
+      - run: editorconfig-checker
