--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,11 +20,12 @@ jobs:
     needs: pre-build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.20.x'
-          cache: false
+          cache: true
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
