--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,3 +50,45 @@ jobs:
       - name: Check editorconfig compliance
         uses: editorconfig-checker/action-editorconfig-checker@main
       - run: editorconfig-checker
+
+  deploy:
+    needs: [pre-build, test-build, lint]
+    if: ${{ github.ref_name == 'main' }}
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_PASS }}
+
+      - name: Extract metadata for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: stroming/final-project-telerik
+          tags: |
+            type=sha,format=short,prefix=
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+      - name: Run Trivy vulnerability scanner
+        if: ${{ !contains(github.event.commits[0].message, '[trivy-skip]') }}
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'docker.io/${{ steps.meta.outputs.tags }}'
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
