--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
   push:
     branches:
-      - 'feature/*'
+      - 'main'
 
 jobs:
   pre-build:
@@ -53,7 +53,6 @@ jobs:
 
   deploy:
     needs: [pre-build, test-build, lint]
-    if: ${{ github.ref_name == 'main' }}
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
@@ -82,6 +81,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
       - name: Run Trivy vulnerability scanner
         if: ${{ !contains(github.event.commits[0].message, '[trivy-skip]') }}
         uses: aquasecurity/trivy-action@master
