ci to be run on feature branches while the deploy to be run on push to master

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,11 @@
 name: Feature-Branch-CI
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
-  pull_request:
-    types:
-      - opened
-
+  push:
+    branches:
+      - 'feature/*'
+      - 'fix/*'
+      - 'hotfix/*'
 jobs:
   pre-build:
     runs-on: ubuntu-latest
