--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-      # - uses: wagoid/commitlint-github-action@v5
+      - uses: wagoid/commitlint-github-action@v5
       - uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
