feat: Added security feature in gha and changed tag to latest

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,23 +13,24 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
       - uses: wagoid/commitlint-github-action@v5
-      - uses: gitleaks/gitleaks-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - uses: gitleaks/gitleaks-action@v2
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  code-vulnerabilities-check:
+  code-security:
     runs-on: ubuntu-latest
     env:
       GO111MODULE: on
     steps:
       - name: Checkout Source
         uses: actions/checkout@v3
+
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
           args: ./...
 
-  dep-vulnerabilities-check:
+  deps-security:
     needs: pre-build
     runs-on: ubuntu-latest
     name: Run govulncheck
@@ -39,7 +40,6 @@ jobs:
         with:
             go-version-input: 1.21
             go-package: ./...
-
   lint:
     needs: pre-build
     runs-on: ubuntu-latest
@@ -50,6 +50,7 @@ jobs:
         with:
           go-version: '1.21'
           cache: true
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
@@ -64,13 +65,16 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.21'
           cache: false
-      - name: gotest
+
+      - name: Run tests
         run: go test ./... -v -count 1 -timeout 5m
+
       - name: Check editorconfig compliance
         uses: editorconfig-checker/action-editorconfig-checker@main
       - run: editorconfig-checker
