--- a/.editorconfig
+++ b/.editorconfig
@@ -18,3 +18,12 @@ insert_final_newline = true
 # Tab indentation (no size specified)
 [Makefile]
 indent_style = tab
+
+# Ignore paths
+[/.deployment/**]
+charset = unset
+end_of_line = unset
+insert_final_newline = unset
+trim_trailing_whitespace = unset
+indent_style = unset
+indent_size = unset
