--- a/.deployment/go-app-chart/templates/deployment.yaml
+++ b/.deployment/go-app-chart/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: {{ .Values.service.port }}
+              containerPort: {{ .Values.service.containerPort }}
               protocol: TCP
           livenessProbe:
             httpGet:
