feat: Image tag handled by infrastructure repo, changed the tagging system

--- a/.deployment/go-app-chart/templates/deployment.yaml
+++ b/.deployment/go-app-chart/templates/deployment.yaml
@@ -26,8 +26,8 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}" # {"$imagepolicy": "flux-system:go-app"}
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          image: "{{ .Values.image }}"
+          imagePullPolicy: Always
           ports:
             - name: http
               containerPort: {{ .Values.service.containerPort }}
